# blizzard-sre-task

./: Dockerfile  Makefile  README.md  cluster.yaml
app/: pyproject.toml  requirements.txt  th3-server.pcap  th3-server.py
infra/: blue-deployment.yaml  green-deployment.yaml  ingress.yaml  service.yaml
overwatched/: README.md  monitor.py
scripts/: bg-swap.sh  deploy.sh
